# sqlhund

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  injectdb.pyi  pyproject.toml  sqlhund.pyi
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  dependecy-review.yml  publish.yml  release.yml
src/: lib.rs
src/patterns/: abstracts.rs  definitions.rs  main.rs  mod.rs
tests/: test_main.py  test_main.rs  test_wild.rs
tests/data/: README.md
