[package]
name = "sqlhund"
description = "A Rust library with Python bindings for detecting SQL injection patterns in input strings. Built for speed and designed especially for AI agents that process or generate SQL queries."
version = "0.0.6"
edition = "2024"
authors = ["Kanishk Navale <navalekanishk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kanishknavale/sqlhund"
homepage = "https://github.com/kanishknavale/sqlhund"
keywords = ["sql", "injection", "security", "detection", "pyo3", "ai-agents"]
categories = ["sql", "cybersecurity", "text-processing", "ai-agents"]

[lib]
name = "sqlhund"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
regex = "1.12.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
csv = "1.4.0"
indicatif = "0.18.4"
rayon = "1.11.0"
