[package]
name = "sqlhund"
description = "**sqlhund** detects SQL injection patterns with CWE and CAPEC classification. Written in Rust with Python bindings via [PyO3](https://pyo3.rs/), it provides security analysis for AI agents that generate or relay SQL queries, preventing database manipulation through dual-axis threat intelligence (technique vs impact)."
version = "0.0.8"
edition = "2024"
authors = ["Kanishk Navale <navalekanishk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kanishknavale/sqlhund"
homepage = "https://github.com/kanishknavale/sqlhund"
keywords = ["sql", "injection", "security", "detection", "pyo3", "ai-agents"]
categories = ["sql", "cybersecurity", "text-processing", "ai-agents"]

[lib]
name = "sqlhund"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
regex = "1.12.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
csv = "1.4.0"
indicatif = "0.18.4"
rayon = "1.11.0"
