[project]
name = "sqlhund"
version = "0.0.8"
description = "**sqlhund** detects SQL injection patterns with CWE and CAPEC classification.Written in Rust with Python bindings via [PyO3](https://pyo3.rs/), it provides security analysis for AI agents that generate or relay SQL queries, preventing database manipulation through dual-axis threat intelligence (technique vs impact)."
authors = [{ name = "Kanishk Navale", email = "navalekanishk@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["sql", "injection", "security", "detection", "pyo3", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Repository = "https://github.com/kanishknavale/sqlhund"

[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[tool.maturin]
module-name = "sqlhund"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "maturin>=1.12.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
addopts = "--color=yes --durations=10"
testpaths = ["tests"]
