[project]
name = "sqlhund"
version = "0.0.9"
description = "Rust-powered auditable SQL injection detection for Python. Built for AI agents."
authors = [{ name = "Kanishk Navale", email = "navalekanishk@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["sql", "injection", "security", "detection", "pyo3", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Repository = "https://github.com/kanishknavale/sqlhund"

[build-system]
requires = ["maturin>=1.13.1"]
build-backend = "maturin"

[tool.maturin]
module-name = "sqlhund"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "maturin>=1.13.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
addopts = "--color=yes --durations=10"
testpaths = ["tests"]
